Hopefully fixing routing issue when hosted.. and blog post display alignment

--- a/example-react/app/stylesheets/components/blog/_blogPost.scss
+++ b/example-react/app/stylesheets/components/blog/_blogPost.scss
@@ -1,15 +1,14 @@
 .blogPostRoot {
   background-color: #EFEFEF;
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-
+  padding: 40px;
+  
   .blogPostPaper {
+    margin: 0;
     padding: 30px;
-    margin: 30px;
-    margin-bottom: 40px;
     width: 100%;
 
     .title {
@@ -33,7 +32,7 @@
     }
   }
   .aboutTheAuthor {
-    margin-top: 0;
+    margin-top: 30px;
     line-height: 1.2;
     padding: 30px;
     padding-top: 0;
