--- a/example-react/app/stylesheets/components/blog/_blogPosts.scss
+++ b/example-react/app/stylesheets/components/blog/_blogPosts.scss
@@ -34,6 +34,7 @@ $blogPostContentText: 24px;
       a {
         text-decoration: none;
         color: $colors-green400;
+        cursor: pointer;
       }
     }
     .year {
